2007-08-25  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tcllib_dns.man: Documented the -loglevel configure option.

2007-08-22  Andreas Kupries  <andreask@activestate.com>

	* spf.test: Added proper requisites to the testsuite.

2007-08-20  Andreas Kupries  <andreask@activestate.com>

	* tcllib_ip.man: Bumped version to 1.1.2 due to the bugfix made
	* ip.tcl:        by the last change.
	* pkgIndex.tcl:

2007-07-05  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* ip.tcl:   bug #1739359 - reject domain names that look like 
	* ip.test:  ipv4 addresses
	
2007-03-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tcllib_ip.man: Fixed all warnings due to use of now deprecated
	* tcllib_dns.man: commands. Added a section about how to give feedback.

2006-11-04  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* ipMoreC.tcl: Silence critcl warning.

2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.9 ========================
	* 

2006-09-19  Andreas Kupries  <andreask@activestate.com>

	* tcllib_ip.man: Bumped version to 1.1.1
	* ip.tcl:
	* pkgIndex.tcl:

2006-05-05  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* dns.tcl: Extended the nameservers command to work on Win9x
	systems and we now make use of this to initially configure a
	default nameserver. Some minor additional cleanup.

2006-04-21  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* dns.tcl: Fixed bug #1158037. We were using the query id to
	locate the DNS state token but this restricts us to 65535 queries
	as the value is packed into a short.

2006-04-20  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* dns.tcl: Applied patch from #1453327 by Segei Golovan to improve
	           support for TXT records.

2006-01-29  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* spf.test: Fixed use of duplicate test names.

2006-01-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
