@@ -1,3 +1,8 @@
+2007-08-26  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* dns.tcl: Applied patch #1610330 from Sergei Golovan to provide
+	asynchronous connection for dns over tcp.
+
 2007-08-25  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tcllib_dns.man: Documented the -loglevel configure option.
